# research-management-assistant

./: .gitignore  README.md  pyproject.toml  remember.txt
backend/scripts/: smoke_embed_bge_chroma.sh  smoke_offline_mvp.sh  smoke_paper_sources.py
backend/src/: config.py  main.py
backend/src/graph/: assistant_nodes.py  assistant_state.py  builder.py  errors.py  nodes.py  state.py
backend/src/services/: LlmPaperSelect.py  answer_service.py  coverage.py  deduplicator.py  embedding_pipeline.py  embedding_service.py  idea_service.py  knowledge_base.py  memory_extractor.py  memory_service.py  memory_store.py  paper_search.py  qa_service.py  query_rewriter.py  research_assistant_workflow.py  research_workflow.py  retrieval_service.py  schemas.py  scoreutils.py  vector_store.py
backend/src/tests/: test_answer_service.py  test_api_mvp.py  test_coverage.py  test_deduplicator.py  test_embedding_pipeline.py  test_embedding_service.py  test_idea_service.py  test_knowledge_base.py  test_llm_judge.py  test_memory_extractor.py  test_memory_service.py  test_memory_store.py  test_paper_discovery_graph.py  test_paper_search_service.py  test_paper_select_graph.py  test_qa_service.py  test_query_rewriter.py  test_research_assistant_workflow.py  test_research_workflow.py  test_retrieval_service.py  test_scoreutils.py  test_vector_store.py
docs/interview/: demo-script.md  interview-qna.md
docs/superpowers/plans/: 2026-06-07-api-smoke-test-script-plan.md  (+11 more)
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  api.js  styles.css
(+27 files in other folders)
